# twitch-indicator

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO  setup-config.sh  twitch-indicator.desktop
src/: main.rs
src/api/: client.rs  mod.rs  models.rs  oauth.rs
src/config/: mod.rs
src/gui/: gtk_settings.rs  indicator.rs  mod.rs  notifications.rs  settings.rs  tray.rs
