[package]
name = "twitch-indicator"
version = "0.1.0"
edition = "2024"
description = "A Twitch stream indicator for Linux with Wayland support"
license = "GPL-3.0"
authors = ["Fredrik Storm <fredrik@fldc.se>"]
homepage = "https://github.com/fldc/twitch-indicator"
readme = "README.md"
documentation = "https://github.com/fldc/twitch-indicator/blob/main/README.md"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify-rust = "4.11"
tiny_http = "0.12"
webbrowser = "1.0"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2.1"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
wayland-client = "0.31"
smithay-client-toolkit = "0.19"
libappindicator = "0.9"
gtk = "0.18"
glib = "0.18"
gio = "0.18"

[dev-dependencies]
tempfile = "3.8"
